<resources>
    <string name="add_money_added_successfully">added successfully</string>
    <string name="add_money_deposits">Deposits</string>
    <string name="add_money_independent_sources">Independent sources</string>
    <string name="add_money_title">New income</string>
    <string name="already_have_account">Already have an account? Log in here</string>
    <string name="and">and</string>
    <string name="app_name" translatable="false">Economy Manager</string>
    <string name="bottom_nav_main_screen_account">Account</string>
    <string name="bottom_nav_main_screen_edit">Transactions</string>
    <string name="bottom_nav_main_screen_balance">Balance</string>
    <string name="bottom_nav_main_screen_sign_out">Sign out</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change password</string>
    <string name="choose_file">Choose</string>
    <string name="custom_dialog_enter_password">Please enter your password</string>
    <string name="custom_dialog_new_password">Enter new password</string>
    <string name="custom_dialog_old_password">Enter old password</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="debt">Debt</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_error">The deletion could not be performed</string>
    <string name="delete_transaction">Are you sure you want to delete this transaction?</string>
    <string name="edit_account">Edit account</string>
    <string name="edit_account_first_name">First name</string>
    <string name="edit_account_last_name">Last name</string>
    <string name="edit_account_phone_number">Phone number</string>
    <string name="edit_account_website">Website</string>
    <string name="edit_account_birth_date">Birth date</string>
    <string name="edit_account_career_title">Career title</string>
    <string name="edit_account_country_albania">Albania</string>
    <string name="edit_account_country_andorra">Andorra</string>
    <string name="edit_account_country_armenia">Armenia</string>
    <string name="edit_account_country_austria">Austria</string>
    <string name="edit_account_country_azerbaijan">Azerbaijan</string>
    <string name="edit_account_country_belarus">Belarus</string>
    <string name="edit_account_country_belgium">Belgium</string>
    <string name="edit_account_country_bosnia_and_herzegovina">Bosnia and Herzegovina</string>
    <string name="edit_account_country_bulgaria">Bulgaria</string>
    <string name="edit_account_country_croatia">Croatia</string>
    <string name="edit_account_country_cyprus">Cyprus</string>
    <string name="edit_account_country_czech_republic">Czech Republic</string>
    <string name="edit_account_country_denmark">Denmark</string>
    <string name="edit_account_country_estonia">Estonia</string>
    <string name="edit_account_country_finland">Finland</string>
    <string name="edit_account_country_france">France</string>
    <string name="edit_account_country_georgia">Georgia</string>
    <string name="edit_account_country_germany">Germany</string>
    <string name="edit_account_country_greece">Greece</string>
    <string name="edit_account_country_hungary">Hungary</string>
    <string name="edit_account_country_iceland">Iceland</string>
    <string name="edit_account_country_ireland">Ireland</string>
    <string name="edit_account_country_italy">Italy</string>
    <string name="edit_account_country_kazakhstan">Kazakhstan</string>
    <string name="edit_account_country_latvia">Latvia</string>
    <string name="edit_account_country_liechtenstein">Liechtenstein</string>
    <string name="edit_account_country_lithuania">Lithuania</string>
    <string name="edit_account_country_luxembourg">Luxembourg</string>
    <string name="edit_account_country_malta">Malta</string>
    <string name="edit_account_country_moldova">Moldova</string>
    <string name="edit_account_country_monaco">Monaco</string>
    <string name="edit_account_country_montenegro">Montenegro</string>
    <string name="edit_account_country_netherlands">Netherlands</string>
    <string name="edit_account_country_north_macedonia">North Macedonia</string>
    <string name="edit_account_country_norway">Norway</string>
    <string name="edit_account_country_poland">Poland</string>
    <string name="edit_account_country_portugal">Portugal</string>
    <string name="edit_account_country_romania">Romania</string>
    <string name="edit_account_country_russia">Russia</string>
    <string name="edit_account_country_san_marino">San Marino</string>
    <string name="edit_account_country_serbia">Serbia</string>
    <string name="edit_account_country_slovakia">Slovakia</string>
    <string name="edit_account_country_slovenia">Slovenia</string>
    <string name="edit_account_country_spain">Spain</string>
    <string name="edit_account_country_sweden">Sweden</string>
    <string name="edit_account_country_switzerland">Switzerland</string>
    <string name="edit_account_country_turkey">Turkey</string>
    <string name="edit_account_country_ukraine">Ukraine</string>
    <string name="edit_account_country_uk">United Kingdom</string>
    <string name="edit_account_country_vatican_city">Vatican City</string>
    <string name="edit_account_gender_female">Female</string>
    <string name="edit_account_gender_male">Male</string>
    <string name="edit_account_gender_other">Other</string>
    <string name="edit_account_incorrect_phone_number">Incorrect phone number</string>
    <string name="edit_account_enter_valid_birth_date">Please enter a valid birth date</string>
    <string name="edit_photo_title">Change account image</string>
    <string name="edit_photo_select_file">Please select a file first</string>
    <string name="edit_photo_upload_successful">Upload successful</string>
    <string name="edit_specific_transaction_title">Edit specific transaction</string>
    <string name="edit_transactions_center_text_select">Select the month and the year</string>
    <string name="edit_transactions_center_text_no_transactions">No transactions made yet</string>
    <string name="edit_transactions_title">Monthly transactions</string>
    <string name="email">Email</string>
    <string name="expense">Expense</string>
    <string name="expenses">Expenses</string>
    <string name="expenses_chart">Expenses chart</string>
    <string name="facebook_app_id" translatable="false">973649146445611</string>
    <string name="facebook_authentication_failed">Facebook authentication failed</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb973649146445611</string>
    <string name="forgot_reset">Reset password</string>
    <string name="forgot_password_email_does_not_exist">Email does not exist in the database</string>
    <string name="google_authentication_failed">Google authentication failed</string>
    <string name="greet_good_morning">Good morning!</string>
    <string name="greet_good_afternoon">Good afternoon!</string>
    <string name="greet_good_evening">Good evening!</string>
    <string name="hour">Hour</string>
    <string name="income">Income</string>
    <string name="incomes">Incomes</string>
    <string name="last_10_transactions">Last 10 transactions</string>
    <string name="last_week_expenses">Last week expenses</string>
    <string name="email_not_valid">Email address is not valid</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="login_forgot_password">Forgot password</string>
    <string name="login_login">Log in</string>
    <string name="login_incorrect_username_password">Incorrect username or password</string>
    <string name="login_no_account">Don\'t have an account? Sign up here</string>
    <string name="login_successful">Login successful</string>
    <string name="minute">Minute</string>
    <string name="money_error1">Please select an option</string>
    <string name="money_error4">Value should not be empty</string>
    <string name="money_spent_percentage">% of your incomes</string>
    <string name="money_spent_you_spent">You spent</string>
    <string name="money_spent_last_week">last week</string>
    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">December</string>
    <string name="monthly_balance">Monthly balance</string>
    <string name="no_changes_have_been_made">No changes have been made</string>
    <string name="no_money_last_week">No money spent last week</string>
    <string name="no_money_records_month">No money records this month</string>
    <string name="no_money_records_yet">No money records yet</string>
    <string name="no_transactions_this_month">No transactions made this month</string>
    <string name="no_transactions_this_year">No transactions made this year</string>
    <string name="no_transactions_yet">No transactions made yet</string>
    <string name="note">Note</string>
    <string name="ok" translatable="false">OK</string>
    <string name="password">Password</string>
    <string name="please_complete_all_fields">Please complete all fields</string>
    <string name="please_try_again">Please try again</string>
    <string name="press_again_exit">Press again to exit</string>
    <string name="proceed">"Proceed "</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="rate_app">Rate the app</string>
    <string name="register">Register</string>
    <string name="remaining_monthly_income">Remaining monthly income</string>
    <string name="reset_database">Reset database</string>
    <string name="salary">Salary</string>
    <string name="save">Save</string>
    <string name="save_changes">Save changes</string>
    <string name="saving">Saving</string>
    <string name="second">Second</string>
    <string name="settings_text">Settings</string>
    <string name="settings_dark_theme">Dark theme</string>
    <string name="settings_currency">Currency</string>
    <string name="settings_language">Language</string>
    <string name="settings_account_deleted">The account was successfully deleted</string>
    <string name="settings_change_password">Are you sure you want to change your password?</string>
    <string name="settings_database_reset">The database was reset successfully</string>
    <string name="settings_delete_account">Are you sure you want to delete your account?</string>
    <string name="settings_email_password_no_match">Email and password do not match</string>
    <string name="settings_password_updated">Password updated successfully</string>
    <string name="settings_passwords_not_empty">The passwords should not be empty</string>
    <string name="settings_old_password_not_empty">The old password should not be empty</string>
    <string name="settings_new_password_not_empty">The new password should not be empty</string>
    <string name="settings_reset_database">Are you sure you want to reset the database?</string>
    <string name="settings_warning">Warning</string>
    <string name="settings_yes">Yes</string>
    <string name="should_have_characters">%s should have %d characters</string>
    <string name="signup_error1">Email already exists</string>
    <string name="signup_error2">Email and password should not be empty</string>
    <string name="signup_error3">Email should not be empty</string>
    <string name="signup_error4">Password should not be empty</string>
    <string name="year">Year</string>
</resources>