<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottomNavigationMainScreenEdit"
        android:icon="@drawable/ic_edit"
        android:title="@string/bottom_nav_main_screen_edit"/>
    <item
        android:id="@+id/bottomNavigationMainScreenBalance"
        android:icon="@drawable/ic_balance"
        android:title="@string/bottom_nav_main_screen_balance"/>
    <item
        android:id="@+id/bottomNavigationMainScreenAccount"
        android:icon="@drawable/ic_account"
        android:title="@string/bottom_nav_main_screen_account"/>
    <!--<item
        android:id="@+id/bottomNavigationMainScreenSignOut"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/bottom_nav_main_screen_sign_out"/>-->
</menu>