<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timeAndDatePickerTopLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A2A2A1"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/timeAndDatePickerBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_margin="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/timeAndDatePickerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintLeft_toRightOf="@+id/timeAndDatePickerBack"
            android:textAlignment="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeAndDatePickerTopLayout"
        android:layout_above="@+id/timeAndDatePickerBottomLayout"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/timeAndDatePickerEditDay"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".75"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/timeAndDatePickerEditMonth"
            android:textSize="18sp"
            android:hint="@string/day"
            android:inputType="numberSigned"/>

        <Spinner
            android:id="@+id/timeAndDatePickerEditMonth"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".75"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/timeAndDatePickerEditDay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/timeAndDatePickerEditYear"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"/>

        <EditText
            android:id="@+id/timeAndDatePickerEditYear"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".75"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/timeAndDatePickerEditMonth"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/timeAndDatePickerEditHour"
            android:hint="@string/year"
            android:textSize="18sp"
            android:inputType="numberSigned"/>

        <EditText
            android:id="@+id/timeAndDatePickerEditHour"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".75"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/timeAndDatePickerEditYear"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/timeAndDatePickerEditMinute"
            android:textSize="18sp"
            android:hint="@string/hour"
            android:inputType="numberSigned"/>

        <EditText
            android:id="@+id/timeAndDatePickerEditMinute"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".75"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/timeAndDatePickerEditHour"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/timeAndDatePickerEditSecond"
            android:hint="@string/minute"
            android:textSize="18sp"
            android:inputType="numberSigned"/>

        <EditText
            android:id="@+id/timeAndDatePickerEditSecond"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".75"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/timeAndDatePickerEditMinute"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/second"
            android:textSize="18sp"
            android:inputType="numberSigned"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timeAndDatePickerBottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp">

        <Button
            android:id="@+id/timeAndDatePickerSave"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".8"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/ic_button_round_corners"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>