<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApplicationPart.ActivitySettings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsTopLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="#A2A2A1">

        <ImageView
            android:id="@+id/settingsBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/settingsTopText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/settingsBack"
            android:layout_marginStart="20dp"
            android:text="@string/settings_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAlignment="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/settingsTopLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settingsThemeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/settingsThemeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_dark_theme"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/settingsDarkThemeSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/settingsThemeText"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settingsCurrencyLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintTop_toBottomOf="@+id/settingsThemeLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/settingsCurrencyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_currency"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Spinner
                android:id="@+id/settingsCurrencySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/settingsCurrencyText"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/settingsRateButton"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintDimensionRatio="H,6:1"
            android:text="@string/rate_app"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/settingsCurrencyLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/ic_button_round_corners"
            android:layout_marginTop="30dp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/settingsChangePasswordButton"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintDimensionRatio="H,6:1"
            android:text="@string/change_password"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/ic_button_round_corners"
            app:layout_constraintTop_toBottomOf="@+id/settingsRateButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/settingsDeleteDatabase"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintDimensionRatio="H,6:1"
            android:text="@string/reset_database"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/ic_button_round_corners_red"
            app:layout_constraintTop_toBottomOf="@id/settingsChangePasswordButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/settingsDeleteButton"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintDimensionRatio="H,6:1"
            android:text="@string/delete_account"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/ic_button_round_corners_red"
            app:layout_constraintTop_toBottomOf="@id/settingsDeleteDatabase"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            style="?android:attr/borderlessButtonStyle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>