<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.example.economy_manager.feature.register.RegisterActivity" />

        <variable
            name="viewModel"
            type="com.example.economy_manager.feature.register.RegisterViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryDark"
        tools:context=".feature.login.LoginActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/signup_layout"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".8">

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:autofillHints="emailAddress"
                android:background="@drawable/ic_outlined_button_dark"
                android:drawableStart="@drawable/ic_email_dark"
                android:drawablePadding="10sp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10sp"
                android:text="@={viewModel.enteredEmail}"
                android:textColor="@color/secondaryDark"
                android:textColorHint="@color/secondaryDark"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:autofillHints="password"
                android:background="@drawable/ic_outlined_button_dark"
                android:drawableStart="@drawable/ic_password_dark"
                android:drawablePadding="10sp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10sp"
                android:text="@={viewModel.enteredPassword}"
                android:textColor="@color/secondaryDark"
                android:textColorHint="@color/secondaryDark"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:background="@drawable/ic_outlined_button_dark"
                android:onClick="@{() -> viewModel.onSignUpButtonClicked(activity, viewModel.enteredEmail, viewModel.enteredPassword)}"
                android:padding="10sp"
                android:stateListAnimator="@null"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/secondaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:onClick="@{() -> activity.onBackPressed()}"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/secondaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>